--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
   <p class="fills">Submit your resume by providing your resume URL:</p>
   <input class="fb" type="text" placeholder="">
 
-  <button class="bt">Update Information</button>
+  <button class="bt">Submit</button>
 </div>
  
 </div>
