--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
   <script src="https://cdn.tailwindcss.com"></script>
 </head> 
 <body>
-   
+
+      <div class="flex">
 <div class="title">
         <p class="para1">Student Job Network</p>
         </div>
-
-    <div class="display">
     <div class="back">
       <i class="fa-solid fa-arrow-left"><a href="https:https://elmerignacio.github.io/c1details/">Back</a></i>
     </div>
+      </div>
  
       
 <div class="flex justify-center items-center">
