--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         </div>
   
 
-<div class="flex justify-center items-center">
+<div class="flex justify-center items-center ml-[1rem]">
   <p class="text-2xl w-[50%] text-white relative pt-[2rem] ml-[5rem]">Thank you for your interest in working with us. Please check below for available job
     opportunities that meet your criteria and send your application by filling out the job
     Application Form.</p>
