--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     Application Form.</p>
 
       <div class="back">
-      <i class="fa-solid fa-arrow-left"><a href="https:"https://elmerignacio.github.io/c1details/index.html">Back</a></i>
+      <i class="fa-solid fa-arrow-left"><a href="https://elmerignacio.github.io/c1details/index.html">Back</a></i>
     </div>
 </div>
  
