--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <input class="fn" type="text" placeholder="Last">
   
     <p class="fill">Phone<spam class="text-[red]">*</spam></p>
-    <input class="fn" type="password" placeholder="Phone">
+    <input class="fn" type="text" placeholder="Phone">
   
     <p class="fill">Available start date<spam class="text-[red]">*</spam></p>
     <input class="fn" type="text" placeholder="Province" value="2024-05-14">
@@ -56,7 +56,7 @@
   <p class="fills">Submit your resume by providing your resume URL:</p>
   <input class="fb" type="text" placeholder="">
 
-  <button a href="https://elmerignacio.github.io/application/" class="bt">Submit</a>
+  <a href="https://elmerignacio.github.io/application/" class="bt">Submit</a>
 </div>
  
 </div>
