--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
   <p class="fills">Submit your resume by providing your resume URL:</p>
   <input class="fb" type="text" placeholder="">
 
-  <a href="https://elmerignacio.github.io/application/" class="bt">Submit</a>
+  <button a href="https://elmerignacio.github.io/application/" class="bt">Submit</a></button>
 </div>
  
 </div>
